Fixed Overlapping Status and Title in Deadlines Table

--- a/css/admin/admin-deadlines.css
+++ b/css/admin/admin-deadlines.css
@@ -1899,7 +1899,7 @@ td:last-child {
 /* Specific column widths */
 .table-wrapper th:nth-child(1),
 .table-wrapper td:nth-child(1) {
-    width: 40px;
+    width: 150px;
     text-align: center;
 }
 
